fixing typsetter errors

--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -65,7 +65,7 @@ knitr::include_graphics("/Users/joshuacantong/Desktop/Academics/Spring 2022/SSCI
 
 
 ## ***Methodology***
-This research has three segments or three methods which are utilized in order to triangulate and answers our two research questions: I) aggregate visualizations examining law enforcement rates by racial subpopulations in the City of Los Angeles, II) Getis-Ord Gi* Hot Spot analyses across the City of Los Angeles, and III) Spatial Lag Models (SLM) across our dependent variables. The first method consists of generating aggregate law enforcement rates by racial subpopulation to find general nonspatial disparity in representation in law enforcement outcomes accounting for population size, the second method is to conduct Getis-Ord Gi* Hot Spot Analyses to find clustering of certain law enforcement outcomes across the City of Los Angeles, and the third method is to utilize a spatial regression approach to fine the ‘neighborhood’ level factors that are most associated with law enforcement outcomes––while accounting for spatial dependence which could make our models biased or inaccurate under the scenario that we fail to account for them. The following segments will quickly review the hot spot analyses and the spatial lag models. 
+This research has three segments or three methods which are utilized in order to triangulate and answers our two research questions: I) aggregate visualizations examining law enforcement rates by racial subpopulations in the City of Los Angeles, II) Getis-Ord Gi* Hot Spot analyses across the City of Los Angeles, and III) Spatial Lag Models (SLM) across our dependent variables. The first method consists of generating aggregate law enforcement rates by racial subpopulation to find general nonspatial disparity in representation in law enforcement outcomes accounting for population size, the second method is to conduct Getis-Ord Gi* Hot Spot Analyses to find clustering of certain law enforcement outcomes across the City of Los Angeles, and the third method is to utilize a spatial regression approach to find the ‘neighborhood’ level factors that are most associated with law enforcement outcomes––while accounting for spatial dependence which could make our models biased or inaccurate under the scenario that we fail to account for them. The following segments will quickly review the hot spot analyses and the spatial lag models. 
 
 ##### *Getis-Ord Gi* Hot Spot Analysis* 
 This study runs Getis-Ord Gi* hot spot analyses across different geographic regions, in order to determine where exactly law enforcement stops, citations, and searches are predominantly spatially concentrated across our jurisdiction. The Gi* method is a local measure of spatial autocorrelation method which determines whether or not there is clustering of low or high values across the site of study. The process essentially transforms the value of interest into a z-score and then, using the spatial weights matrix, determines whether or not there is local spatial clustering of higher or lower values, as compared to the aggregate mean. The equation for this process is established below, taken from Livings, Wu (2020): 
@@ -103,8 +103,8 @@ In regards to diagnostics more generally, the research process also takes into a
 
 
 ## ***Results***
-Aggregates of Various Law Enforcement Rates by Population   
-To begin, the study presents the aggregate visualization of law enforcement stop rates, citations and searches across the City of Los Angeles. The visualization specifically represents the law enforcement outcome by 10,000 residents across Black, Latinx, White and Asian motorists. They rate was calculated by findings the total number of stopped, cited, and searched drivers that were able to be geocoded and spatially joined to the included census tracts within the site of study, divided by the aggregation of racial subpopulations across the included census tracts within the site of study. The data comes from 1-year of data, and it’s limited to census tracts with a population > 500, and excluding census tracts such as UCLA, Griffith Park, LAX and Dodgers Stadium.
+##### Aggregates of Various Law Enforcement Rates by Population   
+To begin, the study presents the aggregate visualization of law enforcement stop rates, citations and searches across the City of Los Angeles. The visualization specifically represents the law enforcement outcome by 10,000 residents across Black, Latinx, White and Asian motorists. The rate was calculated by findings the total number of stopped, cited, and searched drivers that were able to be geocoded and spatially joined to the included census tracts within the site of study, divided by the aggregation of racial subpopulations across the included census tracts within the site of study. The data comes from 1-year of data, and it’s limited to census tracts with a population > 500, and excluding census tracts such as UCLA, Griffith Park, LAX and Dodgers Stadium.
 
 ##### **Figure II. Aggregate Law Enforcement Outcome Rates by Racial Subpopulations in Los Angeles**
 ```{r, echo = FALSE}
@@ -114,7 +114,7 @@ knitr::include_graphics("/Users/joshuacantong/Desktop/Academics/Spring 2022/SSCI
 ```
 
 
-The largest finding is that Black folks are most overpoliced and far more overpoliced than other racial populations across the city, and that Latinx drivers are also more likely to be stopped and searched relative to White and Asian folks. Specifically, this analysis reveals that Black folks are 4x more likely to be stopped, 3x more likely to be cited, and 12x more likely to be searched than White people, relative to their population size. On the other hand, Latinx folks are 1.4x more likely to be stopped, and 3x more likely to be searched than White people, relative to their population size. On the other hand, White and Asian drivers are least policed across the law enforcement outcomes present in this analysis: stop rates, citation rates and search rates. 
+The largest finding is that Black folks are most overpoliced when compared to other racial populations across the city, and that Latinx drivers are also more likely to be stopped and searched relative to White and Asian folks. Specifically, this analysis reveals that Black folks are 4x more likely to be stopped, 3x more likely to be cited, and 12x more likely to be searched than White people, relative to their population size. On the other hand, Latinx folks are 1.4x more likely to be stopped, and 3x more likely to be searched than White people, relative to their population size. On the other hand, White and Asian drivers are least policed across the law enforcement outcomes present in this analysis: stop rates, citation rates and search rates. 
 
 For the purpose of this study, this visualization reveals the sharp racial disparity across law enforcement outcomes. Specifically, though, this work reveals the way in which racial profiling in law enforcement outcomes related to a higher degree of citations––or ticketting––of Black folks. Racial profiling in stops upstream, wherein Black folks are 4x overrepresented in stops compared to White folks, is related to a higher degree of citations for Black folks. Next, this study will examine the geographic concentration of law enforcement outcomes in the City of Los Angeles. 
 
@@ -141,7 +141,7 @@ knitr::include_graphics("/Users/joshuacantong/Desktop/Academics/Spring 2022/SSCI
 The largest findings from this analysis is that high search rates are clustered in South LA, which is a predominantly Black and Latinx geography; after this, stop rates seem to be clustered somewhat in South LA, and citations seem to have the fewest hot spots in South LA. Across all hot Gi* maps, there seems to be hot spots in the DTLA area, which may be related to the higher population in that region of the city. Moreover, the maps find that there are significant cold spots in search rates in West Los Angeles and parts of the western segment of the San Fernando Valley. What the search rate map demonstrates is that while predominantly poor and Black/Latinx South LA has a huge segment of its terrain marked by hot spots for search rates, the predominantly affluent and White West LA has cold spots for searches. While citations don’t seem to be clustered within South LA, they are clustered in areas like DTLA, Central LA (Harvard Heights and Pico-Union), as well as in Venice, Hollywood, Beverly Grove, and Fairfax (uncovered by the researcher using OpenStreetsMap as a interactive leaflet map underneath the Gi* maps). 
 
 ##### *Spatial Lag Models* 
-Lastly, this paper is interested in finding the associations between different neighborhood level factors and the stop, citation and search rates across Los Angeles. The regression table for the Spatial Lag Models (SLMs) are below, as well as their impacts which demonstrate the direct, indirect and total effects for each independent variable. (The direct and indirect effect effect numbers record whether the coefficient of a given variable is more associated with neighboring geographic units’ independent values [or indirect effects], or the reference geographic unit’s values [or direct effects]). Lasage & Pace (2009) note that including impacts are important for interpreting the coefficients of models such as the Spatial Durbin Model (SDM) and the Spatial Lag Model (SLM)––and that failing to do so might otherwise results in a misinterpretation of the coefficients of the variables of interest in one’s regression model(s). 
+Lastly, this paper is interested in finding the associations between different neighborhood level factors and the stop, citation and search rates across Los Angeles. The regression table for the Spatial Lag Models (SLMs) are below, as well as their impacts which demonstrate the direct, indirect and total effects for each independent variable. (The direct and indirect effect numbers record whether the coefficient of a given variable is more associated with neighboring geographic units’ independent values [or indirect effects], or the reference geographic unit’s values [or direct effects]). Lasage & Pace (2009) note that including impacts are important for interpreting the coefficients of models such as the Spatial Durbin Model (SDM) and the Spatial Lag Model (SLM)––and that failing to do so might otherwise results in a misinterpretation of the coefficients of the variables of interest in one’s regression model(s). 
 
 ##### **Table II. Spatial Lag Regressions for Law Enforcement Outcomes in the City of Los Angeles**
 ```{r, echo = FALSE}
@@ -179,7 +179,7 @@ The largest finding from these results is that there are positive associations f
 
 The impact analysis reveals the direct effects and indirect effects entailed across our independent variables. The impact results for stops and citations leads to an interesting finding: while there is a negative association with renter household share and stop rate and citation rate, it appears that this negative association is due to the indirect effect of the average share of census tracts’ around an individual geography. How does this work in practice? We might read it as such: the negative association with renter household share and stop/citation rates are related to a given tract’s neighbors and their share of renter households, and not necessarily strongly related to the renter household share of a reference tract. It seems that there’s an indirect suppressive effect related to renter household share––at least when controlling for other variables. Another interesting findings is related to how the direct and indirect effects of poverty rate change across the citation and search rate models. While both models have a positive association with poverty rate, it appears that citation rates have a large indirect effect, while poverty rate has a large direct effect. 
 
-In turning to the Akaike Information Criterion (AIC) analysis, which allows us to see the goodness of fit across our different models, or the degree to which a model describes the actual data generating process, it’s apparent that the search model is the most predictive, while the stop and citation models trail in their efficacy. The AIC for the search rate model is 2,085; the AIC for the stop rate model is 2,380; and the AIC for the citation rate model is 2,828. Another factor related to evaluating these AICs is that the different dependent variable may hinder the use of the AIC to compare across the models, but in running OLS models prior to the Spatial Lag Models and observing the relative different of adjusted R^2, it seems that the level of fit across models carries over with the AIC figures. Why might the search model be more predictive while the citation model may be less predictive? If this result is viewed in context with the Getis-Ord Gi* analysis, then we might understand the difference of fit across these dependent variables. The search rate hot spot analysis showed a strong clustering of hot spots in South LA, which is a Black-Latinx geography; on the other hand, the citation rate model showed very minimal and the least amount of clustering across the whole city, in relation to the other dependent variable maps. While we know that racial profiling occurs and impacts Black drivers predominantly, and Latinx drivers significantly as well––these findings allow us to see that citation disparity may have a larger disparity at the level of the individual/body, and not at the geographic aggregate. On the other hand, our findings reveal that search rates have both a disparity at the scale of the individual, as well as a disparity at the scale of the geographic aggregate. 
+In turning to the Akaike Information Criterion (AIC) analysis, which allows us to see the goodness of fit across our different models, or the degree to which a model describes the actual data generating process, it’s apparent that the search model is the most predictive, while the stop and citation models trail in their efficacy. The AIC for the search rate model is 2,085; the AIC for the stop rate model is 2,380; and the AIC for the citation rate model is 2,828. Another factor related to evaluating these AICs is that the different dependent variable may hinder the use of the AIC to compare across the models, but in running OLS models prior to the Spatial Lag Models and observing the relative difference of adjusted R^2, it seems that the level of fit across models carries over with the AIC figures. Why might the search model be more predictive while the citation model may be less predictive? If this result is viewed in context with the Getis-Ord Gi* analysis, then we might understand the difference of fit across these dependent variables. The search rate hot spot analysis showed a strong clustering of hot spots in South LA, which is a Black-Latinx geography; on the other hand, the citation rate model showed very minimal and the least amount of clustering across the whole city, in relation to the other dependent variable maps. While we know that racial profiling occurs and impacts Black drivers predominantly, and Latinx drivers significantly as well––these findings allow us to see that citation disparity may have a larger disparity at the level of the individual/body, and not at the geographic aggregate. On the other hand, our findings reveal that search rates have both a disparity at the scale of the individual, as well as a disparity at the scale of the geographic aggregate. 
 
 (as noted in the methods section, these models accounted for multicollinearity, heteroskedasticity, and the spatial dependence of the residuals from prior nonspatial regressions.)
 
